# todo-app-poetry

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
database/: connection.py  models.py
tests/: test_main.py
todo_app/: main.py
