[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Muhammad-Masood <development.masood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
wheel = "^0.43.0"
setuptools = "^69.2.0"
setuptools-metadata = "^0.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
